# ac-local-c

./: CMakeLists.txt  Doxyfile
cutil/: CMakeLists.txt
dict/: CMakeLists.txt
dict/code/: CMakeLists.txt
jalogc/: CMakeLists.txt
local/: CMakeLists.txt
local/code/: CMakeLists.txt
local/code/ac/: local.cpp  local.h
local/example/: CMakeLists.txt  e-foo.c  e-llama.c
local/test/: CMakeLists.txt  t-dummy-plugin.c  t-dummy.c
test-util/doctest-unity/: CMakeLists.txt
